--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-lg sticky-top navbar-light"
         style="background-color: #aba8a7;">
         <a class="navbar-brand"
-            href="/">Finanlyatics</a>
+            href="/">Finalytics</a>
         <button class="navbar-toggler"
             type="button"
             data-toggle="collapse"
@@ -129,9 +129,6 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="footer-copyright text-center py-3">© 2022 Copyright:
-                <a href="https://mdbootstrap.com/">Finalyatics.com</a>
             </div>
         </footer>
     </Main>
