--- a/application/templates/about1.html
+++ b/application/templates/about1.html
@@ -7,8 +7,11 @@
             <div class="card-inner">
                 <div class="header">
                     <h1>Viresh Dhuri</h1>
-                    <h3>Sub-Head</h3>
-                    <h3>Sub-Head</h3>
+                    <h3><a href="https://github.com/Virey07"
+                            target="_blank">GitHub</a></h3>
+                    <h3><a href="https://www.linkedin.com/in/viresh-dhuri-96b50a216/"
+                            target="_blank">linkdin</a></h3>
+                </di
                 </div>
             </div>
         </div>
