--- a/application/templates/CPI.html
+++ b/application/templates/CPI.html
@@ -12,7 +12,7 @@
 
             </div>
             <p>
-                Get monthly analysis by selecting required year form the dropdown for all countries in the legend. For better visualization select maximum 6 countries at a time.
+                Get monthly analysis of year 2017 for all countries in the legend. For better visualization select maximum 6 countries at a time.
             </p>
         </div>
     </div>
